Related: fdo#61186 ensure printer settings paper format is not clobbered

scenario 1: with attached test document

a file->printer settings->properties->paper
  set a paper size, ideally something not used in the test doc, e.g. Executive
b file->print->print
c file->printer settings->properties->paper
  the paper size here should now still be what was selected in a and
  *not* what happened to be the last page format used in the document
  which is letter

Change-Id: I66be32e2d03381dc2103479f1be46669a342a2ab